# GraphRAG

./: README.md  pyproject.toml  requirements.txt
configs/: config.example.json
data/: data_1.txt  data_2.txt  data_3.txt  data_4.txt
index/: chunks.json  graph.json  matrix.npz  metadata.json  vectorizer.pkl
src/graphrag_smart_retrival/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  graph.py  ingest.py  pipeline.py  retrieval.py
