[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-smart-retrieval"
version = "0.1.0"
description = "GraphRAG-style smart retrieval with graph expansion"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["graphrag", "retrieval", "rag", "graph"]
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.0",
  "networkx>=3.1"
]

[project.scripts]
graphrag-smart-retrieval = "graphrag_smart_retrieval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
